fix: disable chrome auto dark mode

--- a/src/styles/variable.css
+++ b/src/styles/variable.css
@@ -84,6 +84,8 @@
 
 /* constant */
 :root {
+  /* disable chrome auto dark mode */
+  color-scheme: only light;
   --header-h: 82px;
   --main-offset-top: -64px;
   --main-w: min(80vw, 1160px);
